# coursework_5_databases

./: README.md  create_database.py  pyproject.toml
src/: DBManager.py  config.py  database.ini  main.py  utils.py
