[tool.poetry]
name = "coursework-5-databases"
version = "0.1.0"
description = ""
authors = ["Евгений Слугин"]
readme = "README.md"
packages = [{include = "coursework_5_databases"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
